--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,51 @@
 <div id="main">
-    <h1>Calculadora</h1>
-
     <form style="margin-top:10px;">
-        Number 1: <input style="margin-top:10px;" class="inputField" type="text" [(ngModel)]="input1" name="input1"> &nbsp;
-        Number 2: <input class="inputField" type="text" [(ngModel)]="input2" name="input2"><br /><br />
+        <!--<p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>-->
+        <div class="monitor">
+            <p style="margin-top:10px; font-size:24px;">{{showCalc}}</p>
+            <p style="margin-top:10px; font-size:24px;">{{inputField}}</p>
+        </div>
+        <!--<input class="inputField" type="text" [(ngModel)]="inputField" name="input2"><br /><br /> -->
 
         <div class="btn">
-            <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="+" (click)="sum()">&nbsp;
-            <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="-" (click)="sub()">&nbsp;
-            <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="x" (click)="mult()">&nbsp;
-            <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="/" (click)="div()">&nbsp;
+            <div class="fila1">
+                <input class="inputButtom" [(ngModel)]="op" [ngClass]="['bntStyle']" type="submit" value="%" (click)="setOp('%')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="CE">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="C" >&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value=">X">&nbsp;
+            </div>
+            <div class="fila2">
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="1/x" (click)="setOp('1/x')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="x2" (click)="setOp('x2')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="2vx" (click)="setOp('2vx')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="/" (click)="setOp('/')">&nbsp;
+            </div>
+            <div class="fila3">
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="7" (click)="addVal('7')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="8" (click)="addVal('8')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="9" (click)="addVal('9')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="x" (click)="setOp('*')">&nbsp;
+            </div>
+            <div class="fila4">
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="4" (click)="addVal('4')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="5" (click)="addVal('5')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="6" (click)="addVal('6')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="-" (click)="setOp('-')">&nbsp;
+            </div>
+            <div class="fila5">
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="1" (click)="addVal('1')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="2" (click)="addVal('2')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="3" (click)="addVal('3')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="+" (click)="setOp('+')">&nbsp;
+            </div>
+            <div class="fila6">
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="+/-" (click)="negativo()">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="0" (click)="addVal('0')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="." (click)="mult()">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="=" (click)="calc()">&nbsp;
+            </div>
             <br />
         </div>
     </form>
-    <p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>
+    <!--<p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>-->
 </div>
