--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,22 @@
     <form style="margin-top:10px;">
         <!--<p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>-->
         <div class="monitor">
-            <p style="margin-top:10px; font-size:24px;">{{showCalc}}</p>
-            <p style="margin-top:10px; font-size:24px;">{{inputField}}</p>
+            <p style="color: #f71414; font-size:18px;">{{showCalc}}</p>
+            <br>
+            <p style="font-size:24px;">{{inputField}}</p>
         </div>
         <!--<input class="inputField" type="text" [(ngModel)]="inputField" name="input2"><br /><br /> -->
 
         <div class="btn">
             <div class="fila1">
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="CE">&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="C" >&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="⊗">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="CE" (click)="clear()">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="C" (click)="clear()">&nbsp;
+                <input class="inputButtomLarge" [ngClass]="['bntStyle']" type="submit" value="⊗" (click)="clear()">&nbsp;
             </div>
             <div class="fila2">
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="⅟x" (click)="setOp('espDiv')">&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="x²" (click)="setOp('quadrado')">&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="√" (click)="setOp('raiz')">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="⅟x" (click)="espDiv()">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="x²" (click)="quadrado()">&nbsp;
+                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="√" (click)="raiz()">&nbsp;
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="/" (click)="setOp('/')">&nbsp;
             </div>
             <div class="fila3">
@@ -40,11 +41,9 @@
             <div class="fila6">
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="+/-" (click)="negativo()">&nbsp;
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="0" (click)="addVal('0')">&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="." (click)="mult()">&nbsp;
-                <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="=" (click)="calc()">&nbsp;
+                <input class="inputButtomLarge" [ngClass]="['bntStyle']" type="submit" value="=" (click)="calc()">&nbsp;
             </div>
             <br />
         </div>
     </form>
-    <!--<p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>-->
 </div>
