Fix some bugs in displaying the operations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,8 @@
     <form style="margin-top:10px;">
         <!--<p style="margin-top:50px; font-size:24px;">Result: {{result}}</p>-->
         <div class="monitor">
-            <p style="color: #f71414; font-size:18px;">{{showCalc}}</p>
-            <br>
-            <p style="font-size:24px;">{{inputField}}</p>
+            <p id="calculation">{{showCalc}}</p>
+            <p id="result">{{inputField}}</p>
         </div>
         <!--<input class="inputField" type="text" [(ngModel)]="inputField" name="input2"><br /><br /> -->
 
