--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,6 @@
-h1{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 form{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
     font-size: larger;
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 }
 
 .monitor{
@@ -14,6 +9,18 @@ form{
     margin-bottom: 20px;
     margin-top: 20px;
     box-shadow:  inset 2px 2px 5px #BABECC, inset -5px -5px 10px #fff;
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+    padding-right: 20px;
+}
+
+#result{
+    font-size: 24px;
+}
+
+#calculation{
+    color: #898989; font-size:18px;
 }
 
 #main{
@@ -85,12 +92,5 @@ input[type="text"]
     margin-top: 5px;
     margin-left: 5px;
 }
-
-.monitor{
-    display: flex;
-    justify-content: end;
-    flex-direction: column;
-}
-
 
 
