fix the monitor CSS

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,11 +16,15 @@ form{
 }
 
 #result{
-    font-size: 24px;
+    font-size: 32px;
+    margin-top: 13px
 }
 
 #calculation{
-    color: #898989; font-size:18px;
+    color: #898989; 
+    font-size:18px;
+    margin: 0;
+    margin-top: 10px;
 }
 
 #main{
