fix the delete buttom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
             <div class="fila1">
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="CE" (click)="clear()">&nbsp;
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="C" (click)="clear()">&nbsp;
-                <input class="inputButtomLarge" [ngClass]="['bntStyle']" type="submit" value="⊗" (click)="clear()">&nbsp;
+                <input class="inputButtomLarge" [ngClass]="['bntStyle']" type="submit" value="⊗" (click)="delet()">&nbsp;
             </div>
             <div class="fila2">
                 <input class="inputButtom" [ngClass]="['bntStyle']" type="submit" value="⅟x" (click)="espDiv()">&nbsp;
